# Markdown_a_MongoDB

./: .env  .gitignore  CHANGELOG.md  README.md  config.ini  config.json  config.py  connection.py  constants.py  functions.py  main.py  poster.py  posts.py  pyproject.toml  reeplace.py  requirements.txt
Directorio_markdowns/: readme.md
